refactor: update object deletion process in ManifestManager to use DeleteObjectsRequest